--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /random_forest/.ipynb_checkpoints/random_forest-checkpoint.ipynb
+/adaboost/.ipynb_checkpoints/adaboost-checkpoint.ipynb
+/adaboost/.ipynb_checkpoints/Notes-checkpoint.md
